# RL-Finance

./: .gitignore  README.md  _config.yml  index.md  pyproject.toml
cuda-notebooks/: actor_critic.ipynb  ddpg.ipynb  deep_qnetwork.ipynb
notebooks/: actor_critic.ipynb  almgren_criss_optimalexceution.ipynb  data.ipynb  ddpg.ipynb  deep_qnetwork.ipynb  finance_applications.ipynb  markowitz.ipynb  mc_policy_gradient.ipynb  model_comparision.ipynb  q_learning.ipynb  qlbs.ipynb  rl_algorithms.py  sarsa.ipynb  temporal_difference_learning.ipynb
