[project]
name = "RLF"
version = "0.1.0"
description = "Reinforcement Learning in Finance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
